add certificates